--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,14 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css">
-  
+
+  <!-- Stats -->
+  <script src="http://code.highcharts.com/highcharts.js"></script>
+  <script src="http://code.highcharts.com/modules/data.js"></script>
+  <script src="http://code.highcharts.com/modules/drilldown.js"></script>
+  <script src="http://code.highcharts.com/modules/exporting.js"></script>
+  <script src="http://code.highcharts.com/modules/export-data.js"></script>
+  <script src="http://code.highcharts.com/modules/accessibility.js"></script>  
 </head>
 <body>
   <app-root></app-root>
